--- a/MyPerformanceChecker/packages.config
+++ b/MyPerformanceChecker/packages.config
@@ -51,6 +51,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net481" />
   <package id="System.Security.Principal.Windows" version="4.0.0" targetFramework="net481" />
   <package id="System.ServiceProcess.ServiceController" version="4.1.0" targetFramework="net481" />
+  <package id="System.Speech" version="8.0.0" targetFramework="net481" />
   <package id="System.Text.Encoding" version="4.0.11" targetFramework="net481" />
   <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net481" />
   <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net481" />
